Changed the module name to be specific to me, added read action

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vfca-crud-helper",
+  "name": "vfca-crud-helper-hugocowan",
   "version": "1.0.0",
   "description": "VF code academy CRUD helper NPM module",
   "main": "index.js",
